Merged revisions 78548 via svnmerge from svn+ssh://pythondev@svn.python.org/python/branches/py3k

................
  r78548 | gregory.p.smith | 2010-02-28 21:54:14 -0800 (Sun, 28 Feb 2010) | 10 lines

  Merged revisions 78546 via svnmerge from
  svn+ssh://pythondev@svn.python.org/python/trunk

  ........
    r78546 | gregory.p.smith | 2010-02-28 21:43:43 -0800 (Sun, 28 Feb 2010) | 3 lines

    Fixes issue #7999: os.setreuid() and os.setregid() would refuse to accept
    a -1 parameter on some platforms such as OS X.
  ........
................